--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "aoc_2023"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+
+[tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
 
 
