--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,10 @@ pytest = "^7.4.3"
 pycco = "^0.6.0"
 mypy = "^1.7.1"
 black = "^23.11.0"
-flake8 = "^6.1.0"
-flake8-black = "^0.3.6"
-flake8-import-order = "^0.18.2"
 nox = "^2023.4.22"
 pre-commit = "^3.5.0"
-flake8-annotations = "^3.0.1"
 xdoctest = "^1.1.2"
+ruff = "^0.1.6"
 
 [build-system]
 requires = ["poetry-core"]
