--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ ignore = [
     "T201",  # I'm going to print, so deal
     "COM812", "ISC001",  # Recommended to work with the ruff formatter
     "D101",  # Maybe I don't want to put a docstring on a tiny class
+    "D103", "D105",  # Make docstrings optional
 ]
 
 [tool.mypy]
