--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "aoc_2023"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+more-itertools = "^10.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
